fix: implement A2A contextID annotation and fix response handling
- Add ark.mckinsey.com/a2a-context-id annotation constant
- Extract contextID from A2A protocol Message and Task responses
- Store contextID in TokenUsageCollector for upward propagation
- Update Query annotations with A2A contextID after execution
- Simplify A2A function hierarchy to single ExecuteA2AAgent function
- Fix metadata update ordering to prevent status field overwrites
- Remove unnecessary info logs for expected A2A operations
- Add nil checks for optional tokenCollector parameter

--- a/ark/config/crd/bases/ark.mckinsey.com_agents.yaml
+++ b/ark/config/crd/bases/ark.mckinsey.com_agents.yaml
@@ -197,13 +197,24 @@ spec:
                       minLength: 1
                       type: string
                     partial:
+                      description: |-
+                        ToolPartial allows overriding the tool's name and description as exposed to the agent,
+                        and preconfiguring or hiding tool parameters from the agent. Parameters defined here
+                        are injected at runtime and are not visible or editable by the agent itself.
                       properties:
                         description:
+                          description: Description to override the tool's description
+                            as exposed to the agent (optional)
                           type: string
                         name:
+                          description: Name to override the tool's name as exposed
+                            to the agent (optional)
                           minLength: 1
                           type: string
                         parameters:
+                          description: Parameters to preconfigure and hide from the
+                            agent; injected at runtime and not visible/editable by
+                            the agent (optional)
                           items:
                             properties:
                               name:
