--- a/services/ark-dashboard/ark-dashboard/package.json
+++ b/services/ark-dashboard/ark-dashboard/package.json
@@ -35,6 +35,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "copy-to-clipboard": "^3.3.3",
+    "date-fns": "^4.1.0",
     "jotai": "^2.15.0",
     "lucide-react": "^0.525.0",
     "mermaid": "^11.9.0",
