--- a/services/ark-api/chart/values.yaml
+++ b/services/ark-api/chart/values.yaml
@@ -9,9 +9,13 @@ global:
 app:
   name: ark-api
   image:
-    repository: ghcr.io/mckinsey/agents-at-scale-ark/
+    #repository: ghcr.io/mckinsey/agents-at-scale-ark/
     # tag defaults to .Chart.AppVersion if not specified
-    pullPolicy: IfNotPresent
+    #pullPolicy: IfNotPresent
+    repository: ark-api
+    # tag defaults to .Chart.AppVersion if not specified
+    pullPolicy: Never
+    AppVersion: latest
   
   # Resource configuration
   resources:
