--- a/services/ark-dashboard/chart/values.yaml
+++ b/services/ark-dashboard/chart/values.yaml
@@ -9,9 +9,13 @@ global:
 app:
   name: ark-dashboard
   image:
-    repository: ghcr.io/mckinsey/agents-at-scale-ark/ark-dashboard
+    #repository: ghcr.io/mckinsey/agents-at-scale-ark/ark-dashboard
     # tag defaults to .Chart.AppVersion if not specified
-    pullPolicy: IfNotPresent
+    #pullPolicy: IfNotPresent
+    repository: ark-dashboard
+    # tag defaults to .Chart.AppVersion if not specified
+    pullPolicy: Never
+    AppVersion: latest
 
   # Well-known config variables, usually set as environment variables
   config:
