--- a/services/ark-dashboard/chart/values.yaml
+++ b/services/ark-dashboard/chart/values.yaml
@@ -9,14 +9,10 @@ global:
 app:
   name: ark-dashboard
   image:
-    #repository: ghcr.io/mckinsey/agents-at-scale-ark/ark-dashboard
+    repository: ghcr.io/mckinsey/agents-at-scale-ark/ark-dashboard
     # tag defaults to .Chart.AppVersion if not specified
-    #pullPolicy: IfNotPresent
-    repository: ark-dashboard
-    # tag defaults to .Chart.AppVersion if not specified
-    pullPolicy: Never
-    AppVersion: latest
-
+    pullPolicy: IfNotPresent
+    
   # Well-known config variables, usually set as environment variables
   config:
     nodeEnv: "production"
