chore: update documentation structure and scripts
- Added a new script to copy marketplace content to the main docs.
- Updated package.json to include new scripts for copying and cleaning marketplace content.
- Removed old marketplace documentation files and metadata.
- Updated .gitignore to exclude copied marketplace content.
- Added necessary dependencies for file operations.

--- a/docs/.gitignore
+++ b/docs/.gitignore
@@ -4,3 +4,6 @@ _pagefind/
 
 # The static HTML version of the docs site built with 'npm run build'.
 out/
+
+# Copied marketplace content - these are generated at build time
+content/marketplace/
