enhance Phoenix service configuration and deployment instructions

--- a/devspace.yaml
+++ b/devspace.yaml
@@ -25,6 +25,10 @@ dependencies:
 #    path: ./services/executor-langchain
 #   postgres-memory:
 #     path: ./services/postgres-memory
+  
+  # # phoenix service for observability. phoenix has a hook to restart ark-controller to pick up its url
+  # phoenix:
+  #   path: ./marketplace/services/phoenix
 
 # Vars - To disable, set environment variables before the devspace commands
 #        For example: ENABLE_CERT_MANAGER=false devspace dev
