--- a/marketplace/services/phoenix/devspace.yaml
+++ b/marketplace/services/phoenix/devspace.yaml
@@ -4,18 +4,6 @@ version: v2beta1
 pipelines:
   dev: |-
     create_deployments --all
-    
-    echo ""
-    echo "Phoenix Dashboard: http://localhost:6006"
-    echo "Press Ctrl+C to stop port-forwarding"
-    echo ""
-    
-    # Wait for Phoenix to be ready and start port-forwarding
-    echo "Waiting for Phoenix to be ready..."
-    until kubectl port-forward -n phoenix svc/phoenix-svc 6006:6006; do 
-      echo "Port-forwarding failed - Phoenix not ready yet. Retrying in 10s..."
-      sleep 10
-    done
 
 deployments:
   phoenix:
@@ -26,10 +14,29 @@ deployments:
       values:
         # Development-specific values can be added here
         httpRoute:
-          # when true, http://phoenix.phoenix.127.0.0.1.nip.io:8080 will be created
-          enabled: false
+          # when true, http://phoenix-svc.phoenix.127.0.0.1.nip.io:8080 will be created
+          enabled: true
         otelEnvironmentVariableSecrets:
           enabled: true
           namespaces:
             - ark-system
             - default
+
+hooks:
+  - command: |-
+      echo "Restarting ark-controller to pick up Phoenix configuration..."
+      
+      # Check if ark-controller-devspace exists first (DevSpace deployment)
+      if kubectl get deployment ark-controller-devspace -n ark-system >/dev/null 2>&1; then
+        echo "Found ark-controller-devspace, restarting..."
+        kubectl rollout restart deployment/ark-controller-devspace -n ark-system
+        kubectl rollout status deployment/ark-controller-devspace -n ark-system --timeout=120s
+      # Otherwise check for regular ark-controller deployment
+      elif kubectl get deployment ark-controller -n ark-system >/dev/null 2>&1; then
+        echo "Found ark-controller, restarting..."
+        kubectl rollout restart deployment/ark-controller -n ark-system
+        kubectl rollout status deployment/ark-controller -n ark-system --timeout=120s
+      else
+        echo "Warning: No ark-controller deployment found in ark-system namespace"
+      fi
+    events: ["after:deploy:phoenix"]
