--- a/marketplace/services/langfuse/devspace.yaml
+++ b/marketplace/services/langfuse/devspace.yaml
@@ -4,20 +4,6 @@ version: v2beta1
 pipelines:
   dev: |-
     create_deployments --all
-    
-    echo ""
-    echo "Langfuse Dashboard: http://localhost:3000"
-    echo "Username: ark@ark.com"
-    echo "Password: password123"
-    echo "Press Ctrl+C to stop port-forwarding"
-    echo ""
-    
-    # Wait for Langfuse to be ready and start port-forwarding
-    echo "Waiting for Langfuse to be ready..."
-    until kubectl port-forward -n telemetry svc/langfuse-web 3000:3000; do 
-      echo "Port-forwarding failed - Langfuse not ready yet. Retrying in 10s..."
-      sleep 10
-    done
 
 deployments:
   langfuse:
@@ -29,7 +15,7 @@ deployments:
         # Development-specific values can be added here
         httpRoute:
           # when true, http://langfuse.telemetry.127.0.0.1.nip.io:8080 will be created
-          enabled: false
+          enabled: true
         otelEnvironmentVariableSecrets:
           enabled: true
           namespaces:
@@ -39,3 +25,22 @@ deployments:
           project:
             publicKey: lf_pk_1234567890
             secretKey: lf_sk_1234567890
+
+hooks:
+  - command: |-
+      echo "Restarting ark-controller to pick up Langfuse configuration..."
+      
+      # Check if ark-controller-devspace exists first (DevSpace deployment)
+      if kubectl get deployment ark-controller-devspace -n ark-system >/dev/null 2>&1; then
+        echo "Found ark-controller-devspace, restarting..."
+        kubectl rollout restart deployment/ark-controller-devspace -n ark-system
+        kubectl rollout status deployment/ark-controller-devspace -n ark-system --timeout=120s
+      # Otherwise check for regular ark-controller deployment
+      elif kubectl get deployment ark-controller -n ark-system >/dev/null 2>&1; then
+        echo "Found ark-controller, restarting..."
+        kubectl rollout restart deployment/ark-controller -n ark-system
+        kubectl rollout status deployment/ark-controller -n ark-system --timeout=120s
+      else
+        echo "Warning: No ark-controller deployment found in ark-system namespace"
+      fi
+    events: ["after:deploy:langfuse"]
