fix: address all 17 PR review comments for A2ATask implementation
- Move protocol conversion functions to internal/genai/a2a_protocol.go
- Remove AssociatedTask field from Query CRD
- Add AgentReconciler event recorder
- Remove ClusterRole-based a2atask_rbac.yaml
- Add A2ATask permissions to ark-tenant chart
- Remove obsolete commented RBAC references
- Fix docs capitalization to match main branch
- Confirm getQueryName function is needed for QueryRef linkage

--- a/charts/ark-tenant/templates/role.yaml
+++ b/charts/ark-tenant/templates/role.yaml
@@ -12,16 +12,17 @@ rules:
   - ark.mckinsey.com
   resources:
   - agents
+  - a2aservers
+  - a2atasks
   - evaluators
   - evaluations
+  - executionengines
   - mcpservers
   - memories
   - models
   - queries
   - teams
   - tools
-  - a2aservers
-  - executionengines
   verbs:
   - create
   - delete
@@ -36,27 +37,29 @@ rules:
   - ark.mckinsey.com
   resources:
   - agents/status
+  - a2aservers/status
+  - a2atasks/status
   - evaluations/status
   - evaluators/status
+  - executionengines/status
   - mcpservers/status
   - memories/status
   - models/status
   - queries/status
   - teams/status
   - tools/status
-  - a2aservers/status
-  - executionengines/status
   - agents/finalizers
+  - a2aservers/finalizers
+  - a2atasks/finalizers
   - evaluators/finalizers
   - evaluations/finalizers
+  - executionengines/finalizers
   - mcpservers/finalizers
   - memories/finalizers
   - models/finalizers
   - queries/finalizers
   - teams/finalizers
   - tools/finalizers
-  - a2aservers/finalizers
-  - executionengines/finalizers
   verbs:
   - get
   - patch
