--- a/services/ark-api/ark-api/pyproject.toml
+++ b/services/ark-api/ark-api/pyproject.toml
@@ -18,6 +18,13 @@ dependencies = [
     "coverage>=7.10.4",
     "pytest>=8.4.2",
     "ark-sdk",
+    "a2a-sdk>=0.2.12",
+    "a2a-sdk[http-server]",
+    "opentelemetry-api>=1.20.0",
+    "opentelemetry-sdk>=1.20.0",
+    "opentelemetry-instrumentation-fastapi>=0.41b0",
+    "opentelemetry-instrumentation-httpx>=0.41b0",
+    "opentelemetry-exporter-otlp>=1.20.0",
 ]
 
 [tool.uv]
