fix: move A2A metadata to status and fix A2ATask creation
- Move A2A context/task ID from annotations to Query status to fix reconciliation loop anti-pattern
- Add queryStatus field to streaming metadata for final chunk
- Update ark-cli TypeScript types to handle queryStatus in streaming
- Fix CLI crash when processing final chunk without choices array
- Fix A2ATask validation by setting required a2aServerRef in spec
- Update tests to read A2A metadata from status instead of annotations
- Update streaming documentation

This fixes the reconciliation loop issue where r.Update() on annotations triggered unnecessary reconciliation cycles.

--- a/tests/a2a-message-context/chainsaw-test.yaml
+++ b/tests/a2a-message-context/chainsaw-test.yaml
@@ -55,12 +55,12 @@ spec:
           status:
             (length(responses)): 1
             (contains(responses[0].content, '1 message(s) received')): true
-    # Verify A2A servers always set contextId annotation in responses and extract it
+    # Verify A2A servers always set contextId in status and extract it
     - script:
         content: |
-          CONTEXT_ID=$(kubectl get query message-counter-first -n $NAMESPACE -o jsonpath='{.metadata.annotations.ark\.mckinsey\.com/a2a-context-id}')
+          CONTEXT_ID=$(kubectl get query message-counter-first -n $NAMESPACE -o jsonpath='{.status.a2a.contextId}')
           if [ -z "$CONTEXT_ID" ]; then
-            echo "ERROR: contextId annotation not set"
+            echo "ERROR: contextId not set in status"
             exit 1
           fi
           echo "$CONTEXT_ID"
