feat: add input-required and auth-required phases for A2ATask
- Add PhaseInputRequired and PhaseAuthRequired constants
- Update ConvertA2AStateToPhase to map to dedicated phases
- Update A2ATask CRD enum to include new phases
- Regenerate CRD manifests

--- a/ark/config/crd/bases/ark.mckinsey.com_a2atasks.yaml
+++ b/ark/config/crd/bases/ark.mckinsey.com_a2atasks.yaml
@@ -442,11 +442,13 @@ spec:
                 default: pending
                 description: |-
                   Phase indicates the current Kubernetes lifecycle stage of the task.
-                  Possible values: pending, assigned, running, completed, failed, cancelled.
+                  Possible values: pending, assigned, running, input-required, auth-required, completed, failed, cancelled.
                 enum:
                 - pending
                 - assigned
                 - running
+                - input-required
+                - auth-required
                 - completed
                 - failed
                 - cancelled
