refactor: improve A2A protocol conversion robustness
- Add PhaseUnknown constant for unrecognized A2A states
- Extract PartKindText/Data/File constants to avoid magic strings
- Update CRD enum to include unknown phase
- Return PhaseUnknown instead of PhaseRunning for unrecognized states

--- a/ark/config/crd/bases/ark.mckinsey.com_a2atasks.yaml
+++ b/ark/config/crd/bases/ark.mckinsey.com_a2atasks.yaml
@@ -442,7 +442,7 @@ spec:
                 default: pending
                 description: |-
                   Phase indicates the current Kubernetes lifecycle stage of the task.
-                  Possible values: pending, assigned, running, input-required, auth-required, completed, failed, cancelled.
+                  Possible values: pending, assigned, running, input-required, auth-required, completed, failed, cancelled, unknown.
                 enum:
                 - pending
                 - assigned
@@ -452,6 +452,7 @@ spec:
                 - completed
                 - failed
                 - cancelled
+                - unknown
                 type: string
               protocolMetadata:
                 additionalProperties:
