--- a/devspace.yaml
+++ b/devspace.yaml
@@ -27,12 +27,16 @@ dependencies:
 #     path: ./services/postgres-memory
   
   # Observability services. Uncomment to enable locally. Only phoenix or langfuse is needed
-  # # phoenix service for observability. phoenix has a hook to restart ark-controller to pick up its url
+  # phoenix service for observability. phoenix has a hook to restart ark-controller to pick up its url
   # phoenix:
-  #   path: ./marketplace/services/phoenix
-  # # langfuse service for observability. langfuse has a hook to restart ark-controller to pick up its url
+  #   git: https://github.com/mckinsey/agents-at-scale-marketplace
+  #   tag: v0.1.1
+  #   subPath: services/phoenix
+  # langfuse service for observability. langfuse has a hook to restart ark-controller to pick up its url
   # langfuse:
-  #   path: ./marketplace/services/langfuse
+  #   git: https://github.com/mckinsey/agents-at-scale-marketplace
+  #   tag: v0.1.1
+  #   subPath: services/langfuse
 
 # Vars - To disable, set environment variables before the devspace commands
 #        For example: ENABLE_CERT_MANAGER=false devspace dev
