--- a/docs/package.json
+++ b/docs/package.json
@@ -4,13 +4,11 @@
   "description": "QB Agentic Runtime Docs",
   "main": "index.js",
   "scripts": {
-    "dev": "npm run copy:marketplace && next --turbopack",
-    "build": "npm run copy:marketplace && next build",
+    "dev": "next --turbopack",
+    "build": "next build",
     "postbuild": "pagefind --site .next/server/app --output-path out/_pagefind",
     "start": "next start",
     "check-links": "node scripts/check-links.js",
-    "copy:marketplace": "node scripts/copy-marketplace-content.js",
-    "clean:marketplace": "rimraf content/marketplace public/marketplace",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -27,9 +25,7 @@
   },
   "devDependencies": {
     "broken-link-checker": "^0.7.8",
-    "fs-extra": "^11.0.0",
     "pagefind": "^1.3.0",
-    "rimraf": "^5.0.0",
     "serve": "^14.2.5"
   },
   "optionalDependencies": {
