chore: add CeliaPrieto and david-gombos to CODEOWNERS (#426)
## Checklist

- [ ] Follow the [contributor guide](./CONTRIBUTING.md)
- [ ] End-to-end tests pass
- [ ] Unit tests for essential parts of your code, e.g. APIs exposed via
SDKs or endpoints
- [ ] Update `./docs`
- [ ] Recognize contributors with "@all-contributors please add <person>
for <code, bug, docs, etc>"
- [ ] Linked issues #eg101

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -7,7 +7,7 @@
 # Dashboard: av3n93rz primary, dwmkerr/Nab-0 secondary for releases
 
 # Root - tech lead or PM for all changes.
-* @dwmkerr @cm94242 @Nab-0
+* @dwmkerr @cm94242 @Nab-0 @CeliaPrieto @david-gombos
 
 # Significant changes to K8S CRDs.
 /ark/config/crd/ @dwmkerr @cm94242
