--- a/tests/agent-tools/chainsaw-test.yaml
+++ b/tests/agent-tools/chainsaw-test.yaml
@@ -5,15 +5,14 @@ metadata:
 spec:
   description: Test agent with weather tool functionality
   steps:
-  - name: step-1
+  - name: setup-and-test
     try:
     - script:
         skipLogOutput: true
         content: |
-          set -u
-          echo "{\"token\": \"$E2E_TEST_AZURE_OPENAI_KEY\", \"url\": \"$E2E_TEST_AZURE_OPENAI_BASE_URL\"}"
+          ../scripts/setup-model-provider.sh auto
         outputs:
-        - name: azure
+        - name: provider
           value: (json_parse($stdout))
     - script:
         content: |
@@ -22,7 +21,22 @@ spec:
         - name: NAMESPACE
           value: ($namespace)
     - apply:
-        file: manifests/*.yaml
+        resource:
+          apiVersion: v1
+          kind: Secret
+          metadata:
+            name: test-model-token
+          type: Opaque
+          data:
+            token: (base64_encode($provider.token))
+    - apply:
+        file: (join('', ['manifests/a01-model-', $provider.type, '.yaml']))
+    - apply:
+        file: manifests/a03-weather-tool.yaml
+    - apply:
+        file: manifests/a04-weather-agent.yaml
+    - apply:
+        file: manifests/a05-weather-query.yaml
     - assert:
         resource:
           apiVersion: ark.mckinsey.com/v1alpha1
