chore: work in progress

--- a/ark/config/crd/bases/ark.mckinsey.com_a2atasks.yaml
+++ b/ark/config/crd/bases/ark.mckinsey.com_a2atasks.yaml
@@ -15,20 +15,14 @@ spec:
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
-    - jsonPath: .status.phase
-      name: Phase
-      type: string
-    - jsonPath: .spec.taskId
-      name: Task ID
-      type: string
-    - jsonPath: .spec.contextId
-      name: Context ID
-      type: string
     - jsonPath: .spec.queryRef.name
       name: Query
       type: string
-    - jsonPath: .status.assignedAgent.name
-      name: Assigned Agent
+    - jsonPath: .spec.agentRef.name
+      name: Agent
+      type: string
+    - jsonPath: .status.phase
+      name: Phase
       type: string
     - jsonPath: .metadata.creationTimestamp
       name: Age
@@ -74,6 +68,18 @@ spec:
                     type: string
                 required:
                 - name
+                type: object
+              agentRef:
+                description: AgentRef references the agent executing this task.
+                properties:
+                  name:
+                    description: Name of the Agent resource.
+                    type: string
+                  namespace:
+                    description: |-
+                      Namespace where the Agent resource is located.
+                      If empty, defaults to the same namespace as the A2ATask.
+                    type: string
                 type: object
               contextId:
                 description: ContextID links this task to an A2A conversation context
@@ -133,6 +139,7 @@ spec:
                 type: string
             required:
             - a2aServerRef
+            - agentRef
             - queryRef
             - taskId
             type: object
@@ -213,19 +220,6 @@ spec:
                   - parts
                   type: object
                 type: array
-              assignedAgent:
-                description: AssignedAgent references the agent that executed or is
-                  executing this task.
-                properties:
-                  name:
-                    description: Name of the Agent resource.
-                    type: string
-                  namespace:
-                    description: |-
-                      Namespace where the Agent resource is located.
-                      If empty, defaults to the same namespace as the A2ATask.
-                    type: string
-                type: object
               completionTime:
                 description: CompletionTime records when task execution finished (success
                   or failure).
