feat: add TTL cleanup and rename sessionId to contextId in A2ATask
- Implement TTL cleanup for A2ATask resources (deletes after TTL from creation time)
- Rename sessionId to contextId in A2ATaskStatus to match A2A protocol terminology
- Update both config/crd and dist/chart CRDs consistently
- Remove noisy INFO log messages from routine reconciliation events
- Add nolint comments for pre-existing cognitive complexity in tests
- Restore Kubernetes events (kept for kubectl get events debugging)

--- a/ark/config/crd/bases/ark.mckinsey.com_a2atasks.yaml
+++ b/ark/config/crd/bases/ark.mckinsey.com_a2atasks.yaml
@@ -284,6 +284,10 @@ spec:
                   - type
                   type: object
                 type: array
+              contextId:
+                description: ContextID links this task to a specific A2A conversation
+                  context.
+                type: string
               error:
                 description: Error contains the error message if the task failed.
                 type: string
@@ -469,10 +473,6 @@ spec:
                 - rejected
                 - auth-required
                 - unknown
-                type: string
-              sessionId:
-                description: SessionID links this task to a specific A2A conversation
-                  session.
                 type: string
               startTime:
                 description: StartTime records when task execution began.
