feat: Add sample workflow (#431)
- [ ] Follow the [contributor guide](./CONTRIBUTING.md)
- [ ] End-to-end tests pass
- [ ] Unit tests for essential parts of your code, e.g. APIs exposed via
SDKs or endpoints
- [ ] Update `./docs`
- [ ] Recognize contributors with "@all-contributors please add <person>
for <code, bug, docs, etc>"
- [ ] Linked issues #eg101

Co-authored-by: Aman Vivek Ramkumar <aman_vivek_ramkumar@external.mckinsey.com>

--- a/devspace.yaml
+++ b/devspace.yaml
@@ -13,6 +13,8 @@ dependencies:
     path: ./services/ark-api
   ark-dashboard:
     path: ./services/ark-dashboard
+#  argo-workflows:
+#    path: ./services/argo-workflows
 #  ark-api-a2a:
 #    path: ./services/ark-api-a2a
 #  ark-mcp:
