--- a/tests/agent-parameters/chainsaw-test.yaml
+++ b/tests/agent-parameters/chainsaw-test.yaml
@@ -4,17 +4,32 @@ metadata:
   name: agent-parameters
 spec:
   steps:
-    - try:
+    - name: setup-and-test
+      try:
       - script:
           skipLogOutput: true
           content: |
-            set -u
-            echo "{\"token\": \"$E2E_TEST_AZURE_OPENAI_KEY\", \"url\": \"$E2E_TEST_AZURE_OPENAI_BASE_URL\"}"
+            ../scripts/setup-model-provider.sh auto
           outputs:
-          - name: azure
+          - name: provider
             value: (json_parse($stdout))
       - apply:
-          file: "manifests/*.yaml"
+          resource:
+            apiVersion: v1
+            kind: Secret
+            metadata:
+              name: test-model-token
+            type: Opaque
+            data:
+              token: (base64_encode($provider.token))
+      - apply:
+          file: (join('', ['manifests/a01-model-', $provider.type, '.yaml']))
+      - apply:
+          file: "manifests/a02-configmap.yaml"
+      - apply:
+          file: "manifests/a03-secret-params.yaml"
+      - apply:
+          file: "manifests/a05-agent.yaml"
       - assert:
           resource:
             apiVersion: v1
