--- a/tests/agent-partial-tool/chainsaw-test.yaml
+++ b/tests/agent-partial-tool/chainsaw-test.yaml
@@ -5,17 +5,32 @@ metadata:
 spec:
   description: Test agent with a tool using partial parameters
   steps:
-    - try:
+    - name: setup-and-test
+      try:
       - script:
           skipLogOutput: true
           content: |
-            set -u
-            echo "{\"token\": \"$E2E_TEST_AZURE_OPENAI_KEY\", \"url\": \"$E2E_TEST_AZURE_OPENAI_BASE_URL\"}"
+            ../scripts/setup-model-provider.sh auto
           outputs:
-          - name: azure
+          - name: provider
             value: (json_parse($stdout))
       - apply:
-          file: "manifests/*.yaml"
+          resource:
+            apiVersion: v1
+            kind: Secret
+            metadata:
+              name: test-model-token
+            type: Opaque
+            data:
+              token: (base64_encode($provider.token))
+      - apply:
+          file: (join('', ['manifests/a01-model-', $provider.type, '.yaml']))
+      - apply:
+          file: manifests/a03-tool.yaml
+      - apply:
+          file: manifests/a04-agent.yaml
+      - apply:
+          file: manifests/a05-query.yaml
       - assert:
           resource:
             apiVersion: ark.mckinsey.com/v1alpha1
