--- a/tests/agent-structured-output/chainsaw-test.yaml
+++ b/tests/agent-structured-output/chainsaw-test.yaml
@@ -15,10 +15,9 @@ spec:
     - script:
         skipLogOutput: true
         content: |
-          set -u
-          echo "{\"token\": \"$E2E_TEST_AZURE_OPENAI_KEY\", \"url\": \"$E2E_TEST_AZURE_OPENAI_BASE_URL\"}"
+          ../scripts/setup-model-provider.sh auto
         outputs:
-        - name: azure
+        - name: provider
           value: (json_parse($stdout))
     - script:
         content: |
@@ -27,7 +26,20 @@ spec:
         - name: NAMESPACE
           value: ($namespace)
     - apply:
-        file: manifests/*.yaml
+        resource:
+          apiVersion: v1
+          kind: Secret
+          metadata:
+            name: test-model-token
+          type: Opaque
+          data:
+            token: (base64_encode($provider.token))
+    - apply:
+        file: (join('', ['manifests/a01-model-', $provider.type, '.yaml']))
+    - apply:
+        file: manifests/a03-agent.yaml
+    - apply:
+        file: manifests/a04-query.yaml
 
   - name: verify-model-ready
     try:
