--- a/tests/a2a-message-context/chainsaw-test.yaml
+++ b/tests/a2a-message-context/chainsaw-test.yaml
@@ -55,12 +55,12 @@ spec:
           status:
             (length(responses)): 1
             (contains(responses[0].content, '1 message(s) received')): true
-    # Verify A2A servers always set contextId in status and extract it
+    # Verify A2A servers always set contextId in response and extract it
     - script:
         content: |
-          CONTEXT_ID=$(kubectl get query message-counter-first -n $NAMESPACE -o jsonpath='{.status.a2a.contextId}')
+          CONTEXT_ID=$(kubectl get query message-counter-first -n $NAMESPACE -o jsonpath='{.status.responses[0].a2a.contextId}')
           if [ -z "$CONTEXT_ID" ]; then
-            echo "ERROR: contextId not set in status"
+            echo "ERROR: contextId not set in response a2a metadata"
             exit 1
           fi
           echo "$CONTEXT_ID"
