Fix for failing tests

--- a/tests/agent-structured-output/manifests/a03-agent.yaml
+++ b/tests/agent-structured-output/manifests/a03-agent.yaml
@@ -10,7 +10,7 @@ spec:
     Extract the requested information from the input text and return it in the specified JSON format.
     Be thorough in identifying named entities and provide accurate sentiment analysis.
   modelRef:
-    name: structured-output-test-model
+    name: test-model
   outputSchema:
     type: object
     properties:
