--- a/tests/agent-structured-output/chainsaw-test.yaml
+++ b/tests/agent-structured-output/chainsaw-test.yaml
@@ -48,7 +48,7 @@ spec:
           apiVersion: ark.mckinsey.com/v1alpha1
           kind: Model
           metadata:
-            name: structured-output-test-model
+            name: test-model
             namespace: ($namespace)
           status:
             conditions:
