--- a/tests/a2a-message-context/chainsaw-test.yaml
+++ b/tests/a2a-message-context/chainsaw-test.yaml
@@ -44,7 +44,8 @@ spec:
           metadata:
             name: message-counter-first
           status:
-            phase: done
+            (conditions[?type == 'Completed']):
+            - status: 'True'
     # Verify first response shows 1 message
     - assert:
         resource:
@@ -92,7 +93,8 @@ spec:
           metadata:
             name: message-counter-second
           status:
-            phase: done
+            (conditions[?type == 'Completed']):
+            - status: 'True'
     # Verify second response shows 2 messages
     - assert:
         resource:
