fix: wait for Completed condition in remaining a2a tests

--- a/tests/a2a-blocking-task-completed/chainsaw-test.yaml
+++ b/tests/a2a-blocking-task-completed/chainsaw-test.yaml
@@ -43,7 +43,8 @@ spec:
           metadata:
             name: countdown-test-query
           status:
-            phase: done
+            (conditions[?type == 'Completed']):
+            - status: 'True'
     # Verify response contains full countdown history
     - assert:
         timeout: 1s
