fix: replace phase: done with Completed condition in Query tests
Updated 15 chainsaw tests to check for Completed condition instead of phase: done. This prevents tests from timing out when queries fail, since the Completed condition is set on both success and failure, while phase: done is only set on success.

Tests fixed:
- agent-default-model
- agent-overrides
- agent-partial-tool
- agent-structured-output
- agent-tools
- filesystem-mcp
- jq-filter-test
- model-custom-headers
- model-properties
- queries
- query-label-selector
- query-parameters
- team-graph-selector
- team-graph
- team-selector

--- a/tests/agent-default-model/chainsaw-test.yaml
+++ b/tests/agent-default-model/chainsaw-test.yaml
@@ -120,7 +120,8 @@ spec:
           metadata:
             name: default-model-query
           status:
-            phase: done
+            (conditions[?type == 'Completed']):
+            - status: 'True'
     - assert:
         resource:
           apiVersion: ark.mckinsey.com/v1alpha1
