--- a/tests/model-properties/chainsaw-test.yaml
+++ b/tests/model-properties/chainsaw-test.yaml
@@ -68,7 +68,8 @@ spec:
           metadata:
             name: model-properties-query
           status:
-            phase: done
+            (conditions[?type == 'Completed']):
+            - status: 'True'
     - assert:
         resource:
           apiVersion: ark.mckinsey.com/v1alpha1
