--- a/tests/team-graph/chainsaw-test.yaml
+++ b/tests/team-graph/chainsaw-test.yaml
@@ -31,7 +31,8 @@ spec:
           metadata:
             name: test-graph-team
           status:
-            phase: done
+            (conditions[?type == 'Completed']):
+            - status: 'True'
         timeout: 180s
 
   - name: validate-graph-execution
