--- a/tests/team-selector/chainsaw-test.yaml
+++ b/tests/team-selector/chainsaw-test.yaml
@@ -71,7 +71,8 @@ spec:
           metadata:
             name: selector-team-query
           status:
-            phase: done
+            (conditions[?type == 'Completed']):
+            - status: 'True'
     - assert:
         resource:
           apiVersion: ark.mckinsey.com/v1alpha1
