fix: remove trailing newline from contextId in a2a-message-context test
Use 'echo -n' instead of 'echo' to prevent adding a newline character to the
contextId value. The newline was being embedded in the annotation value,
potentially breaking A2A context lookup.

--- a/tests/a2a-message-context/chainsaw-test.yaml
+++ b/tests/a2a-message-context/chainsaw-test.yaml
@@ -64,7 +64,7 @@ spec:
             echo "ERROR: contextId not set in response a2a metadata"
             exit 1
           fi
-          echo "$CONTEXT_ID"
+          echo -n "$CONTEXT_ID"
         env:
         - name: NAMESPACE
           value: ($namespace)
