fix: add fast timeouts for terminal state assertions in a2a-message-context
Add 1s timeout to assertions after Completed=True since the Query is in a
terminal state and won't change. Also add debug script to show actual response
content and contextId annotation when the test fails, making it easier to
diagnose A2A context propagation issues.

--- a/tests/a2a-message-context/chainsaw-test.yaml
+++ b/tests/a2a-message-context/chainsaw-test.yaml
@@ -46,8 +46,9 @@ spec:
           status:
             (conditions[?type == 'Completed']):
             - status: 'True'
-    # Verify first response shows 1 message
+    # Verify first response shows 1 message (terminal state, fast check)
     - assert:
+        timeout: 1s
         resource:
           apiVersion: ark.mckinsey.com/v1alpha1
           kind: Query
@@ -95,8 +96,21 @@ spec:
           status:
             (conditions[?type == 'Completed']):
             - status: 'True'
-    # Verify second response shows 2 messages
+    # Debug: show actual response content
+    - script:
+        content: |
+          echo "=== Second Query Response ==="
+          kubectl get query message-counter-second -n $NAMESPACE -o jsonpath='{.status.responses[0].content}'
+          echo ""
+          echo "=== Second Query Context ID ==="
+          kubectl get query message-counter-second -n $NAMESPACE -o jsonpath='{.metadata.annotations.ark\.mckinsey\.com/a2a-context-id}'
+          echo ""
+        env:
+        - name: NAMESPACE
+          value: ($namespace)
+    # Verify second response shows 2 messages (terminal state, fast check)
     - assert:
+        timeout: 1s
         resource:
           apiVersion: ark.mckinsey.com/v1alpha1
           kind: Query
