fix: use printf instead of echo -n to extract contextId
The 'echo -n' was being captured literally as '-n <contextId>' instead of
suppressing the newline. Use printf '%s' instead which reliably outputs
without a trailing newline and works across all shells.

--- a/tests/a2a-message-context/chainsaw-test.yaml
+++ b/tests/a2a-message-context/chainsaw-test.yaml
@@ -65,7 +65,7 @@ spec:
             echo "ERROR: contextId not set in response a2a metadata"
             exit 1
           fi
-          echo -n "$CONTEXT_ID"
+          printf '%s' "$CONTEXT_ID"
         env:
         - name: NAMESPACE
           value: ($namespace)
